--- a/app/src/main/res/layout/fragment_chat_screen.xml
+++ b/app/src/main/res/layout/fragment_chat_screen.xml
@@ -20,6 +20,8 @@
 
     <EditText
         android:id="@+id/message_input"
+        style="@style/style_type_box"
+        android:layout_marginTop="4dp"
         android:layout_weight="1"
         android:hint="@string/type_message_here"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +30,7 @@
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintHorizontal_weight="7"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/style_type_box" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
 
     <ImageButton
