--- a/app/src/main/res/layout/image_message_container_left.xml
+++ b/app/src/main/res/layout/image_message_container_left.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="start"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="4dp"
-            android:background="#A7ACAB"
+            android:background="@drawable/left_message_box_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -31,33 +31,22 @@
 
             <ImageView
                 android:id="@+id/image_msg_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:adjustViewBounds="true"
-                android:maxWidth="300dp"
-                android:maxHeight="300dp"
-                android:scaleType="fitCenter"
                 android:src="@mipmap/ic_launcher"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@tools:sample/avatars"
+                style="@style/imageViewMessage" />
 
             <TextView
                 android:id="@+id/image_time_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="TextView"
+                style="@style/message.time.left"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image_msg_iv"
-                app:setTimeString="@{message}" />
+                app:layout_constraintTop_toBottomOf="@+id/dataTextView"
+                app:setTimeString="@{message}"
+                tools:text="17:08" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -81,6 +70,15 @@
                 app:layout_constraintStart_toStartOf="@+id/image_msg_iv"
                 app:layout_constraintTop_toTopOf="@+id/image_msg_iv"
                 app:srcCompat="@drawable/ic_baseline_cloud_download_24" />
+
+            <TextView
+                android:id="@+id/dataTextView"
+                style="@style/message.data.left.image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image_msg_iv"
+                app:setImageMessageData="@{message}"
+                tools:text="This is my picture man, lorem ipsum" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
