--- a/app/src/main/res/layout/image_message_container_right.xml
+++ b/app/src/main/res/layout/image_message_container_right.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="end"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="4dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/right_message_box_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -31,33 +31,24 @@
 
         <ImageView
             android:id="@+id/image_msg_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:adjustViewBounds="true"
-            android:maxWidth="300dp"
-            android:maxHeight="300dp"
-            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            style="@style/imageViewMessage" />
 
         <TextView
             android:id="@+id/image_time_tv"
+            style="@style/message.time.right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:text="TextView"
-            app:setTimeString="@{message}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_msg_iv" />
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            app:setTimeString="@{message}"
+            tools:text="17:08" />
 
         <ProgressBar
             android:id="@+id/progressBarImageRight"
@@ -68,6 +59,15 @@
             app:layout_constraintEnd_toEndOf="@+id/image_msg_iv"
             app:layout_constraintStart_toStartOf="@+id/image_msg_iv"
             app:layout_constraintTop_toTopOf="@+id/image_msg_iv" />
+
+        <TextView
+            android:id="@+id/textView7"
+            style="@style/message.data.right.image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:setImageMessageData="@{message}"
+            app:layout_constraintTop_toBottomOf="@+id/image_msg_iv"
+            tools:text="Hi there this is my new edit, like share and subscibe" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
