--- a/app/src/main/res/layout/item_contact_list.xml
+++ b/app/src/main/res/layout/item_contact_list.xml
@@ -25,7 +25,7 @@
 
         <TextView
             android:id="@+id/nameText"
-            style="@style/list_item_heading"
+            style="@style/list_item.heading"
             android:text="@={contact.nickname}"
             app:layout_constraintStart_toEndOf="@+id/profile_image"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/subHeadingText"
-            style="@style/item_list_subheading"
+            style="@style/list_item.subheading"
             android:text="@={contact.username}"
             app:layout_constraintBottom_toBottomOf="@+id/profile_image"
             app:layout_constraintStart_toStartOf="@+id/nameText"
