--- a/app/src/main/res/layout/text_message_container_left.xml
+++ b/app/src/main/res/layout/text_message_container_left.xml
@@ -40,19 +40,23 @@
 
             <TextView
                 android:id="@+id/message_tv"
-                style="@style/leftMessageBox"
+                style="@style/message.data.left"
                 android:text="@{message.data}"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sender_name_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/sender_name_tv"
+                tools:text="Your industry is also responsible for the increased risk" />
 
             <TextView
                 android:id="@+id/time_tv"
-                style="@style/leftMessageBox"
-                android:textSize="10dp"
+                style="@style/message.time.left"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/message_tv"
-                app:setTimeString="@{message}" />
+                app:setTimeString="@{message}"
+                tools:text="17:10" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
