--- a/app/src/main/res/layout/text_message_container_right.xml
+++ b/app/src/main/res/layout/text_message_container_right.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -17,7 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginStart="30dp"
             android:layout_marginBottom="4dp"
@@ -30,24 +31,22 @@
 
             <TextView
                 android:id="@+id/time_tv"
-                style = "@style/rightMessageBox"
-                android:textSize="10dp"
+                style="@style/message.time.right"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/message_tv"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/message_tv"
-                app:setTimeString="@{message}" />
+                app:setTimeString="@{message}"
+                tools:text="17:08" />
 
             <TextView
                 android:id="@+id/message_tv"
-                style = "@style/rightMessageBox"
+                style="@style/message.data.right"
                 android:text="@{message.data}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Hey there its abhishek jagushte" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
