--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="background_primary">#fafafa</color>
     <color name="light_accent">#906FCC</color>
     <color name="black">#000000</color>
-
+    <color name="text_color_dark">#272626</color>
 </resources>
