--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
-        android:src="@android:mipmap/sym_def_app_icon"
+        android:src="@drawable/ic_mail_profile_picture_male"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,16 +45,16 @@
         tools:text="abhishekjagushte" />
 
 
-    <TextView
-        android:id="@+id/timestamp_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp"
-        android:text="17 Aug 1999"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@+id/username_text"
-        app:layout_constraintTop_toBottomOf="@+id/username_text" />
+<!--    <TextView-->
+<!--        android:id="@+id/timestamp_text"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="17 Aug 1999"-->
+<!--        android:textSize="15sp"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/username_text"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/username_text" />-->
 
     <Button
         android:id="@+id/add_friend_button"
